# sticks

./: .gitignore  hie.yaml  puzzles.cabal  sticks.cabal
app/: AutomaticSolve.hs  Block.hs  ChooseBit.hs  GenericApplicative.hs  GenericEach.hs  Main.hs  ManualSolve.hs  PQueue.hs  PathSolver.hs  Queue.hs  Render.hs  Search.hs  Select.hs  SymbolicSolver.hs  TraversableCodec.hs
app/Derive/: Applicative.hs  Codec.hs  Each.hs
app/Searching/: Queue.hs  Search.hs
app/Symbolic/: ChooseBit.hs  Counting.hs  Select.hs
dungeons/: Grids.hs  Main.hs  Parser.hs  Puzzle.hs  Rendering.hs  Solution.hs  full.txt
examples/: Logic.hs
lib/: Symbolic.hs
lib/Derive/: Applicative.hs
lib/Searching/: PQueue.hs
lib/Symbolic/: ChooseBit.hs  List.hs  Select.hs
logicgrid/: Main.hs
povray/: anim.ini  anim.pov
sticks/: Block.hs  Main.hs  Render.hs  SymbolicSolver.hs
sudoku/: Main.hs
unruly/: Main.hs  Parser.hs  Puzzle.hs  Renderer.hs  example.txt
