cabal-version:      3.4
name:               sticks
version:            0.1.0.0
license:            ISC
license-file:       LICENSE
author:             Eric Mertens
maintainer:         emertens@gmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall

executable sticks
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010

    other-modules:
        Block
        SymbolicSolver
        PathSolver
        Render
        Derive.Applicative
        Derive.Codec
        Derive.Each
        Searching.PQueue
        Searching.Queue
        Searching.Search
        Symbolic.ChooseBit
        Symbolic.Counting
        Symbolic.Select

    -- things that we shouldn't ever need to specify
    default-extensions:
        BlockArguments
        DeriveAnyClass
        DeriveGeneric
        DeriveTraversable
        DerivingVia
        EmptyCase
        FlexibleContexts
        FlexibleInstances
        ImportQualifiedPost
        LambdaCase
        MultiParamTypeClasses
        StandaloneDeriving
        TypeOperators

    build-depends:
        base,
        comonad,
        containers,
        ersatz,
        lens,
